--- a/Lab-11-TFX-KFP/cicd/tfx-cli/Dockerfile
+++ b/Lab-11-TFX-KFP/cicd/tfx-cli/Dockerfile
@@ -1,5 +1,5 @@
-FROM tensorflow/tfx:0.15.0rc0
-RUN RELEASE=0.1.32 \
+FROM tensorflow/tfx:0.15.0
+RUN RELEASE=0.1.35 \
 && pip install https://storage.googleapis.com/ml-pipeline/release/$RELEASE/kfp.tar.gz
 
 ENV LC_ALL=C.UTF-8 LANG=C.UTF-8
