--- a/Lab-11-TFX-KFP/cicd/tfx-cli/Dockerfile
+++ b/Lab-11-TFX-KFP/cicd/tfx-cli/Dockerfile
@@ -1,6 +1,6 @@
 FROM tensorflow/tfx:0.15.0
-#RUN RELEASE=0.1.33 \
-#&& pip install google-resumable-media==0.4.1 https://storage.googleapis.com/ml-pipeline/release/$RELEASE/kfp.tar.gz 
+RUN RELEASE=0.1.34 \
+&& pip install google-resumable-media==0.4.1 https://storage.googleapis.com/ml-pipeline/release/$RELEASE/kfp.tar.gz 
 
 ENV LC_ALL=C.UTF-8 LANG=C.UTF-8
 
