--- a/lab-04-tfx-cicd/cloudbuild.yaml
+++ b/lab-04-tfx-cicd/cloudbuild.yaml
@@ -34,6 +34,7 @@ steps:
   - 'ARTIFACT_STORE_URI=$_ARTIFACT_STORE_URI'
   - 'DATA_ROOT_URI=$_DATA_ROOT_URI'
   - 'PIPELINE_NAME=${_PIPELINE_NAME}-${TAG_NAME}'
+  - 'TRAINED_MODEL_URI=${_TRAINED_MODEL_URI}/${TAGE_NAME}'
   dir: $_PIPELINE_FOLDER
 
 
