--- a/lab-04-tfx-cicd/cloudbuild.yaml
+++ b/lab-04-tfx-cicd/cloudbuild.yaml
@@ -35,7 +35,7 @@ steps:
   - 'DATA_ROOT_URI=$_DATA_ROOT_URI'
   - 'PIPELINE_NAME=${_PIPELINE_NAME}-${TAG_NAME}'
   - 'MODULE_FILE_URI=$_ARTIFACT_STORE_URI/modules/transform_train.py'
-  - 'TRAINED_MODEL_URI=${$_ARTIFACT_STORE_URI}/trained_models/${_PIPELINE_NAME}/${TAG_NAME}'
+  - 'TRAINED_MODEL_URI=${_ARTIFACT_STORE_URI}/trained_models/${_PIPELINE_NAME}/${TAG_NAME}'
   dir: $_PIPELINE_FOLDER
 
 
