--- a/lab-04-tfx-cicd/cloudbuild.yaml
+++ b/lab-04-tfx-cicd/cloudbuild.yaml
@@ -31,7 +31,7 @@ steps:
   env: 
   - 'TFX_IMAGE_URI=$_TFX_IMAGE_URI'
   - 'PROJECT_ID=$PROJECT_ID'
-  - 'ARTIFACT_STORE_URI='
+  - 'ARTIFACT_STORE_URI=$_ARTIFACT_STORE_URI'
   - 'DATA_ROOT_URI=$_DATA_ROOT_URI'
   - 'PIPELINE_NAME=${_PIPELINE_NAME}-${TAG_NAME}'
   - 'MODULE_FILE_URI=$_ARTIFACT_STORE_URI/modules/transform_train.py'
